# smod

./: ARCHITECTURE.md  Cargo.toml  README.md  registry.json
src/: cli.rs  config.rs  doctor.rs  installer.rs  lockfile.rs  main.rs  package.rs  registry.rs  scaffold.rs
src/commands/: doctor.rs  info.rs  init.rs  install.rs  list.rs  mod.rs  new.rs  publish.rs  remove.rs  search.rs  update.rs  verify.rs
src/ui/: color.rs  json.rs  mod.rs  progress.rs  spinner.rs  table.rs
tests/: cli.rs
